# transcriptor

./: .gitignore  LICENSE  README.md  generate_icons.py  install.sh  pyproject.toml  requirements.txt  transcriptor.desktop  uninstall.sh
transcriptor/: __init__.py  _tray_linux.py  _tray_pystray.py  app.py  audio.py  config.py  hotkey.py  main.py  settings_dialog.py  text_input.py  transcriber.py  tray.py
